# fs-crawler-rs

./: Cargo.toml  README.md  folders.txt
src/: crawler.rs  main.rs
