[package]
name = "file_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
simplelog = "0.12.1"
log = "0.4.11"

[dev-dependencies]
tempfile = "3.2"